syntax = "proto3";
package model;
option go_package = ".;mall";

import "model/oms_order_item.proto";
import "model/oms_order_operate_history.proto";

// 订单
message Order {
  // 基本信息
  uint64 id = 1; // 订单id
  string order_sn = 2; // 订单编号
  uint64 member_id = 3; // 会员id
  uint32 pay_type = 4; // 支付方式：0->未支付；1->支付宝；2->微信
  uint32 source_type = 5; // 订单来源：0->PC订单；1->app订单
  uint32 order_type = 6; // 订单类型：0->正常订单；1->秒杀订单
  string delivery_company = 7; // 物流公司(配送方式)
  string delivery_sn = 8; // 物流单号
  uint32 auto_confirm_day = 9; // 自动确认时间（天）
  uint32 receive_time = 10; // 确认收货时间
  uint32 integration = 11; // 可以获得的积分
  uint32 growth = 12; // 可以活动的成长值
  string promotion_info = 13; // 活动信息
  string note = 14; // 订单备注
  // 收货人信息
  string receiver_name = 15; // 收货人姓名
  string receiver_phone = 16; // 收货人电话
  string receiver_post_code = 17; // 收货人邮编
  string receiver_province = 18; // 省份/直辖市
  string receiver_city = 19; // 城市
  string receiver_region = 20; // 区
  string receiver_detail_address = 21; // 详细地址
  // 费用信息
  string total_amount = 22; // 订单总金额
  string freight_amount = 23; // 运费金额
  uint64 coupon_id = 24; // 优惠券id
  string coupon_amount = 25; // 优惠券抵扣金额
  uint32 use_integration = 26; // 下单时使用的积分
  string integration_amount = 27; // 积分抵扣金额
  string promotion_amount = 28; // 促销优化金额（促销价、满减、阶梯价）
  string discount_amount = 29; // 管理员后台调整订单使用的折扣金额
  string pay_amount = 30; // 应付金额（实际支付金额）
  // 发票信息
  uint32 bill_type = 31; // 发票类型：0->不开发票；1->电子发票；2->纸质发票
  string bill_header = 32; // 发票抬头
  string bill_content = 33; // 发票内容
  string bill_receiver_phone = 34; // 收票人电话
  string bill_receiver_email = 35; // 收票人邮箱
  // 状态
  uint32 status = 36; // 订单状态：0->待付款；1->待发货；2->已发货；3->已完成；4->已关闭；5->无效订单
  uint32 confirm_status = 37; // 确认收货状态：0->未确认；1->已确认
  uint32 delete_status = 38; // 删除状态：0->未删除；1->已删除
  // 时间
  uint32 payment_time = 39; // 支付时间
  uint32 delivery_time = 40; // 发货时间
  uint32 comment_time = 41; // 评价时间
  uint32 create_time = 42; // 提交时间
  uint32 modify_time = 43; // 修改时间
  // 冗余字段
  string member_username = 44; // 用户帐号

  // 关联
  repeated model.OrderItem order_items = 100; // 订单商品列表
  repeated model.OrderOperateHistory order_operate_histories = 101; // 订单操作记录列表
}